--- a/views/admin/product/edit.ejs
+++ b/views/admin/product/edit.ejs
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Danh sách danh mục sản phẩm</h1>
+    <h1>Edit sản phẩm</h1>
 </body>
 </html>
