--- a/views/admin/category/list.ejs
+++ b/views/admin/category/list.ejs
@@ -6,8 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 <body>
-    <h1>Sửa danh mục</h1>
+<h1>Danh sách category</h1>
+<ul>
+    <% for (var i = 0; i < list.length; i++) { %>
+    <li><%= list[i].name %> <img src="<%= list[i].thumbnail %>" alt=""></li>
+    <% } %>
+</ul>
+
 </body>
 </html>
